--- a/src/main/resources/templates/employees/update.html
+++ b/src/main/resources/templates/employees/update.html
@@ -13,12 +13,14 @@
             <!-- コンテンツ -->
             <div class="container-fluid p-0">
                 <h1 class="h3 mb-3">従業員 更新</h1>
-                <p>パスワードは変更する場合のみ入力してください。</p>
             </div>
             <div class="col-12 col-xxl-6">
 
                 <div class="col-xl-12">
                     <div class="card">
+                      <div class="card-header">
+                        パスワードは変更する場合のみ入力してください。
+                      </div>
                         <div class="card-body">
                             <form th:action="@{/employees/{code}/update(code=${code})}" th:object="${employee}" th:method="post">
                                 <div class="wizard wizard-success mb-4">
